--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,31 @@
 version: '3.8'
 
 services:
-  app:
-    image: openjdk:17-jdk
-    container_name: springboot-app
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mydatabase
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8
-    container_name: mysql-db
+  mysql-db:
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     ports:
       - "3306:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
-    networks:
-      - app-network
+      - mysql-data:/var/lib/mysql
 
-networks:
-  app-network:
-    driver: bridge
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mysql-db
+      PMA_PORT: 3306
+      PMA_USER: myuser
+      PMA_PASSWORD: mypassword
+    ports:
+      - "8081:80"
+    depends_on:
+      - mysql-db
 
 volumes:
-  mysql_data:
+  mysql-data:
+
+
