--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=NewProjectCash
 
 # ????????? ??????????? ? ???? ?????? MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA ? Hibernate ?????????
